Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88529

wrong symbol is getting deleted when tap on clear button

XMLWordPrintable

    • f54044d4a92ab5ef04c11bc3ca9f064e91d97e63 (qt/qtbase/dev) f66924c2a0e486b79152de50904b7bd6e2ba8f90 (qt/qtbase/6.2)

      try the test using an qt quick virtual keyboard example

      1. change the language to Arabic
      2. enter the text
      3. change the language to English
      4. enter the text
      5. Move the cursor to the starting of the text(leftmost position) and tap on clear button in keyboard

      EXPECTED RESULT:
      Either entered text should not be deleted or if it should be deleted the select language and according to cursor it should delete the English text first
      ACTUAL RESULT:
      first arabic symbol was deleted

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            ashestova2 Aleksandra Shestova
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There is 1 open Gerrit change